--- a/components/ui/Card/AiCard/AiCard.module.css
+++ b/components/ui/Card/AiCard/AiCard.module.css
@@ -13,6 +13,7 @@
     left: 0;
     cursor: pointer; 
     margin-left: 7px;
+    background-color:red
 }
 
 .card {
@@ -57,6 +58,7 @@
     height: 50px; 
     border-radius: 10px;
     border: 3px solid rgba(120, 59, 162, 1);
+    margin-top: 15px;
 }
 
 .paragraph {
@@ -77,3 +79,23 @@
     margin-top: -6px; 
 
 }
+.favoriteButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+
+  }
+  .heartIcon {
+    width: 24px;
+    height: 24px;
+    
+  }
