--- a/app/AiTools/AiTools.module.css
+++ b/app/AiTools/AiTools.module.css
@@ -30,13 +30,26 @@
   }
 
   .section {
-    margin: 50px 10px;
+    margin: 50px 20px;
   }
 
   .searchBar {
-    flex: none;
+    width: 100%;
   }
 }
 
 @media (min-width: 481px) and (max-width: 1024px) {
+  .searchBarContainer {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+  .section {
+    margin: 50px ;
+  }
+
+  .searchBar {
+    width: 90%;
+  }
+
 }
