--- a/app/AiTools/AiTools.module.css
+++ b/app/AiTools/AiTools.module.css
@@ -22,6 +22,13 @@
   flex: 1;
 }
 
+.endMessage {
+  text-align: center;
+  padding: 10px;
+  font-size: 16px;
+  color: gray;
+}
+
 @media (max-width: 480px) {
   .searchBarContainer {
     flex-direction: column;
