--- a/sections/home/DadSection/Dad.module.css
+++ b/sections/home/DadSection/Dad.module.css
@@ -38,7 +38,7 @@
   gap: 140px;
 }
 
-.textHeading {
+.textContent {
   display: flex;
   flex-direction: column;
   text-align: end;
@@ -46,7 +46,7 @@
   height: 349px;
 }
 
-.textHead {
+.descriptionText {
   font-size: 27px;
   line-height: 40px;
   margin-bottom: 50px;
