--- a/app/Components/InputField/InputField.css
+++ b/app/Components/InputField/InputField.css
@@ -1,6 +1,7 @@
 .form-group {
-  margin-bottom: 1rem;
+  margin-block: 40px;
   text-align: right;
+  width: 100%;
 }
 
 .form-group label {
@@ -20,7 +21,7 @@
 .form-group input {
   width: 100%;
   padding: 0.9rem;
-  border: 1px solid #e2e8f0;
+  border: 1px solid var(--secondary);
   border-radius: 8px;
   font-size: 1rem;
   text-align: right;
@@ -38,6 +39,19 @@
   width: 100%;
 }
 
+.arrow-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  height: 100%;
+  transform: translateY(-50%);
+  padding-right: 10px;
+  cursor: pointer;
+  border-right: 2px solid var(--secondary);
+  display: flex;
+  align-items: center;
+}
+
 .input-icon {
   position: absolute;
   left: 10px;
@@ -47,7 +61,7 @@
 }
 
 .error-message {
-  font-size: 17px;
+  font-size: 16px;
   color: #db4a39;
   margin-top: 0.5rem;
   text-align: right;
